ASSIGNED - bug 384418: [Releng] Create Maven/Tycho build for Sphinx https://bugs.eclipse.org/bugs/show_bug.cgi?id=384418
Enabled build to be executed on MacOsX